# pst-hbsps

./: .gitattributes  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py  hbsps.rst  modules.rst
local/: create_tng_spectra.py  illustris_manual_fit.py
src/besta/: _version.py  besta-config.yml  config.py  kinematics.py  output.py  spectrum.py
src/besta/pipeline_modules/: __init__.py  full_spectral_fit.py  kin_dust.py  sfh_photometry.py
src/hbsps/: kinematics.py  output.py  pipeline.py  postprocess.py  sfh.py  specBasics.py
src/hbsps.egg-info/: PKG-INFO  SOURCES.txt
src/hbsps/pipeline_modules/: __init__.py  base_module.py  kin_dust.py  sfh_photometry.py  sfh_spectra.py
tests/: cosmosis_datablock.py  pipeline_test.py  test_pipeline_module.py  test_sfh.py
