[build-system]
requires = ["setuptools >= 75.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "besta"
dynamic = ["version", "dependencies"]
authors = [
  { name="Pablo Corcho-Caballero", email="p.corcho.caballero@rug.nl" },
]
description = "Hierarchical Bayesian Stelllar Population Synthesis"
readme = "README.md"
keywords = ["astronomy", "SPS"]
license = {text = "BSD-3-Clause"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: BSD License',
    'Topic :: Scientific/Engineering',
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.setuptools.packages.find]
where = ["src"]

[tool.versioneer]
VCS = 'git'
style = 'pep440'
versionfile_source = 'src/besta/_version.py'
versionfile_build = 'besta/_version.py'
tag_prefix = 'v'

[project.urls]
Homepage = "https://github.com/PabloCorcho/besta"
Issues = "https://github.com/PabloCorcho/besta/issues"
